Hero styling added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,22 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello</h1>
-    <h2>World</h2>
+    <div class="hero">
+      <div class="container p-5">
+        <div class="row">
+          <div class="col-sm-6">
+            <h1>Tracey Lintott</h1>
+            <h2>Aspring Front-End Developer, based in England, UK.</h2>
+            <span><button href="" class="contact-btn">Contact Me</button></span>
+          </div>
+          <div class="col-sm-6">
+            <img
+              src="/imgs/pink women.jpg"
+              class="img-fluid float-start pinklady"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
