--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
           </div>
           <div class="col-sm-6">
             <img
-              src="/imgs/pink women.jpg"
-              class="img-fluid float-start pinklady"
+              src="/imgs/purplewomen.jpg"
+              class="img-fluid float-start title-image"
             />
           </div>
         </div>
