project gallery added

--- a/index.html
+++ b/index.html
@@ -30,21 +30,28 @@
   </head>
   <body>
     <div class="hero">
-      <div class="container p-5">
+      <h1>Tracey Lintott</h1>
+      <h2>Aspring Front-End Developer, based in England, UK.</h2>
+      <span><button href="" class="contact-btn">Contact Me</button></span>
+    </div>
+    <h3>Featured Projects</h3>
+    <div class="projects">
+      <dive class="projects-container">
         <div class="row">
-          <div class="col-sm-6">
-            <h1>Tracey Lintott</h1>
-            <h2>Aspring Front-End Developer, based in England, UK.</h2>
-            <span><button href="" class="contact-btn">Contact Me</button></span>
+          <div class="col-sm-3">
+            <img src="imgs/books.png" class="img-fluid project-img" />
           </div>
-          <div class="col-sm-6">
-            <img
-              src="/imgs/purplewomen.jpg"
-              class="img-fluid float-start title-image"
-            />
+          <div class="col-sm-3">
+            <img src="imgs/baking.png" class="img-fluid project-img" />
+          </div>
+          <div class="col-sm-3">
+            <img src="imgs/weather.png" class="img-fluid project-img" />
+          </div>
+          <div class="col-sm-3">
+            <img src="imgs/clock.png" class="img-fluid project-img" />
           </div>
         </div>
-      </div>
+      </dive>
     </div>
   </body>
 </html>
