about page added and styled

--- a/about.html
+++ b/about.html
@@ -26,32 +26,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Home</title>
+    <title>About</title>
   </head>
   <body>
-    <div class="hero">
-      <h1 class="h1-text">Tracey Lintott</h1>
-      <h2>Aspring Front-End Developer, based in England, UK.</h2>
-      <span><button href="" class="btn contact-btn">Contact Me</button></span>
-    </div>
-    <h3>Featured Projects</h3>
-    <div class="projects">
-      <dive class="projects-container">
-        <div class="row">
-          <div class="col-sm-3">
-            <img src="imgs/books.png" class="img-fluid project-img" />
-          </div>
-          <div class="col-sm-3">
-            <img src="imgs/baking.png" class="img-fluid project-img" />
-          </div>
-          <div class="col-sm-3">
-            <img src="imgs/weather.png" class="img-fluid project-img" />
-          </div>
-          <div class="col-sm-3">
-            <img src="imgs/clock.png" class="img-fluid project-img" />
+    <div class="about-section container">
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="about-section-content">
+            <h1 class="mb-4">About Me</h1>
+            <p>
+              Hi I'm Tracey Lintott an Aspiring Front-End Developer based in
+              England, UK.
+            </p>
+            <a href="" class="btn project-btn">My Projects</a>
           </div>
         </div>
-      </dive>
+        <div class="col-lg-6">
+          <img src="imgs/me.png" class="img-fluid about-img" />
+        </div>
+      </div>
     </div>
   </body>
 </html>
