--- a/projects.html
+++ b/projects.html
@@ -26,24 +26,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>About</title>
+    <title>Projects</title>
   </head>
   <body>
     <div class="content-container container">
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="content">
-            <h1 class="mb-4">About Me</h1>
-            <p>
-              Hi I'm Tracey Lintott an Aspiring Front-End Developer based in
-              England, UK.
-            </p>
-            <a href="" class="btn project-btn">My Projects</a>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <img src="imgs/me.png" class="img-fluid" />
-        </div>
+      <div class="content">
+        <h1 class="mb-4">About Me</h1>
       </div>
     </div>
   </body>
