projects page added and styling started

--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,55 @@
   <body>
     <div class="content-container container">
       <div class="content">
-        <h1 class="mb-4">About Me</h1>
+        <h1 class="mb-4">Projects I've been working on...</h1>
+        <div class="img-grid p-5">
+          <div class="row">
+            <div class="col-sm-6">
+              <img
+                src="imgs/books.png"
+                class="img-fluid rounded-3"
+                alt="book app"
+              />
+            </div>
+            <div class="col-sm-6">
+              <h4>Book App</h4>
+              <p class="para-text">Built with HTML and CSS</p>
+            </div>
+            <div class="col-sm-6">
+              <h4>Weather App</h4>
+              <p class="para-text">Built with HTML, CSS and JavaScript</p>
+            </div>
+            <div class="col-sm-6">
+              <img
+                src="imgs/weather.png"
+                class="img-fluid rounded-3"
+                alt="weather app"
+              />
+            </div>
+            <div class="col-sm-6">
+              <img
+                src="imgs/baking.png"
+                class="img-fluid rounded-3"
+                alt="baking app"
+              />
+            </div>
+            <div class="col-sm-6">
+              <h4>Baking App</h4>
+              <p class="para-text">Built with HTML and CSS</p>
+            </div>
+            <div class="col-sm-6">
+              <h4>World Clock App</h4>
+              <p class="para-text">Built with HTML, CSS and JavaScript</p>
+            </div>
+            <div class="col-sm-6">
+              <img
+                src="imgs/clock.png"
+                class="img-fluid rounded-3"
+                alt="book app"
+              />
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
