--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <h1 class="h1-text">Tracey Lintott</h1>
       <h2>Aspring Front-End Developer, based in England, UK.</h2>
       <span><button href="" class="btn contact-btn">Contact Me</button></span>
+      <a href="/projects.html"> about me</a>
     </div>
     <h3>Featured Projects</h3>
     <div class="projects">
