contact details added to contact page

--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,23 @@
     <div class="content-container container">
       <div class="content"></div>
       <h1>Get in touch...</h1>
+      <h4>Email:</h4>
+      <p>traceyjlintott@hotmail.co.uk</p>
+      <h4>Linkedin</h4>
+      <p>
+        <a
+          href="https://www.linkedin.com/in/tracey-lintott/"
+          target="_blank"
+          alt=""
+          >Tracey Lintott</a
+        >
+      </p>
+      <h4>Instagram</h4>
+      <p>
+        <a href="https://www.instagram.com/traceyj28/" target="_blank" alt=""
+          >@traceyj28</a
+        >
+      </p>
     </div>
   </body>
 </html>
