nav bar added and styled

--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,27 @@
     <title>Contact</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/">
+          <img src="imgs/tl logo.png" class="logo d-none d-md-block" alt="" />
+        </a>
+        <ul>
+          <li>
+            <a href="/">Home</a>
+          </li>
+          <li>
+            <a href="/about.html">About</a>
+          </li>
+          <li>
+            <a href="/projects.html">Work</a>
+          </li>
+          <li class="active">
+            <a href="/contact.html">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="content"></div>
       <h1>Get in touch...</h1>
