--- a/index.html
+++ b/index.html
@@ -29,11 +29,31 @@
     <title>Home</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/">
+          <img src="imgs/tl logo.png" class="logo d-none d-md-block" alt="" />
+        </a>
+        <ul>
+          <li class="active">
+            <a href="/">Home</a>
+          </li>
+          <li>
+            <a href="/about.html">About</a>
+          </li>
+          <li>
+            <a href="/projects.html">Work</a>
+          </li>
+          <li>
+            <a href="/contact.html">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="hero">
       <h1 class="h1-text">Tracey Lintott</h1>
       <h2>Aspring Front-End Developer, based in England, UK.</h2>
       <span><button href="" class="btn contact-btn">Contact Me</button></span>
-      <a href="/contact.html"> about me</a>
     </div>
     <h3>Featured Projects</h3>
     <div class="projects">
