--- a/about.html
+++ b/about.html
@@ -29,6 +29,28 @@
     <title>About</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/">
+          <img src="imgs/tl logo.png" class="logo d-none d-md-block" alt="" />
+        </a>
+        <ul>
+          <li>
+            <a href="/">Home</a>
+          </li>
+          <li class="active">
+            <a href="/about.html">About</a>
+          </li>
+          <li>
+            <a href="/projects.html">Work</a>
+          </li>
+          <li>
+            <a href="/contact.html">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="content-container container">
       <div class="row">
         <div class="col-lg-6">
