footer added to homepage

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a href="/about.html">About</a>
           </li>
           <li>
-            <a href="/projects.html">Work</a>
+            <a href="/projects.html">Projects</a>
           </li>
           <li>
             <a href="/contact.html">Contact</a>
@@ -56,23 +56,50 @@
       <span><button href="" class="btn contact-btn">Contact Me</button></span>
     </div>
     <h3>Featured Projects</h3>
-    <div class="projects">
-      <dive class="projects-container">
-        <div class="row">
-          <div class="col-sm-3">
-            <img src="imgs/books.png" class="img-fluid project-img" />
+    <div class="container projects">
+      <div class="row">
+        <div class="col-sm-3">
+          <img src="imgs/books.png" class="img-fluid project-img" />
+        </div>
+        <div class="col-sm-3">
+          <img src="imgs/baking.png" class="img-fluid project-img" />
+        </div>
+        <div class="col-sm-3">
+          <img src="imgs/weather.png" class="img-fluid project-img" />
+        </div>
+        <div class="col-sm-3">
+          <img src="imgs/clock.png" class="img-fluid project-img" />
+        </div>
+      </div>
+
+      <footer>
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+          <div>
+            <h5>Work Inquiry</h5>
+            <p>Let's work together</p>
           </div>
-          <div class="col-sm-3">
-            <img src="imgs/baking.png" class="img-fluid project-img" />
-          </div>
-          <div class="col-sm-3">
-            <img src="imgs/weather.png" class="img-fluid project-img" />
-          </div>
-          <div class="col-sm-3">
-            <img src="imgs/clock.png" class="img-fluid project-img" />
+          <div>
+            <a href="" class="btn project-btn mt-3">Contact me</a>
           </div>
         </div>
-      </dive>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto:traceyjlintott@hotmail.co.uk" class="email-link">
+            <i class="fa-regular fa-envelope"></i>
+            traceyjlintott@hotmail.co.uk</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="https://github.com/TLintott" target="_blank">
+            <i class="fa-brands fa-github"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/tracey-lintott/" target="_blank">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+          <a href="https://www.instagram.com/traceyj28/" target="_blank">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
