--- a/about.html
+++ b/about.html
@@ -52,21 +52,51 @@
     </div>
 
     <div class="content-container container">
-      <div class="row">
+      <div class="row align-items-center">
         <div class="col-lg-6">
           <div class="content">
             <h1 class="mb-4">About Me</h1>
             <p>
-              Hi I'm Tracey Lintott an Aspiring Front-End Developer based in
-              England, UK.
+              Hi I'm Tracey Lintott. I'm an Aspiring Front-End Developer based
+              in England, UK.
             </p>
-            <a href="" class="btn project-btn">My Projects</a>
+            <a href="/projects.html" class="btn project-btn">My Projects</a>
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="imgs/me.png" class="img-fluid" />
+          <img
+            src="imgs/me.png"
+            class="about-img img-fluid rounded mx-auto d-block"
+          />
         </div>
       </div>
+      <footer>
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+          <div>
+            <h5>Work Inquiry</h5>
+            <p class="mb-0">Let's work together</p>
+          </div>
+          <div>
+            <a href="/contact.html" class="btn project-btn mt-3">Contact me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto: traceyj28@icloud.com" class="email-link">
+            traceyj28@icloud.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="https://github.com/TLintott" target="_blank">
+            <i class="fa-brands fa-github"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/tracey-lintott/" target="_blank">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+          <a href="https://www.instagram.com/traceyj28/" target="_blank">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
