--- a/contact.html
+++ b/contact.html
@@ -51,25 +51,65 @@
       </nav>
     </div>
     <div class="content-container container">
-      <div class="content"></div>
-      <h1>Get in touch...</h1>
-      <h4>Email:</h4>
-      <p>traceyjlintott@hotmail.co.uk</p>
-      <h4>Linkedin</h4>
-      <p>
-        <a
-          href="https://www.linkedin.com/in/tracey-lintott/"
-          target="_blank"
-          alt=""
-          >Tracey Lintott</a
-        >
-      </p>
-      <h4>Instagram</h4>
-      <p>
-        <a href="https://www.instagram.com/traceyj28/" target="_blank" alt=""
-          >@traceyj28</a
-        >
-      </p>
+      <div class="content">
+        <h1 class="mb-5">Get in touch...</h1>
+        <div class="row align-items-center">
+          <div class="col-lg-6">
+            <h4>Email:</h4>
+            <a href="mailto:traceyjlintott@hotmail.co.uk"
+              >traceyjlintott@hotmail.co.uk</a
+            >
+            <h4>Linkedin</h4>
+            <a
+              href="https://www.linkedin.com/in/tracey-lintott/"
+              target="_blank"
+              alt=""
+              >Tracey Lintott</a
+            >
+            <h4>Instagram</h4>
+            <a
+              href="https://www.instagram.com/traceyj28/"
+              target="_blank"
+              alt=""
+              >@traceyj28</a
+            >
+          </div>
+
+          <div class="col-lg-6">
+            <img
+              src="imgs/contact img.png"
+              class="about-img img-fluid rounded mx-auto d-block"
+            />
+          </div>
+        </div>
+      </div>
+      <footer>
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+          <div>
+            <h5>Work Inquiry</h5>
+            <p class="mb-0">Let's work together</p>
+          </div>
+          <div>
+            <a href="" class="btn project-btn mt-3">Contact me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto: traceyj28@icloud.com" class="email-link">
+            traceyj28@icloud.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="https://github.com/TLintott" target="_blank">
+            <i class="fa-brands fa-github"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/tracey-lintott/" target="_blank">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+          <a href="https://www.instagram.com/traceyj28/" target="_blank">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
