--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
     <div class="hero">
       <h1 class="h1-text">Tracey Lintott</h1>
       <h2>Aspring Front-End Developer, based in England, UK.</h2>
-      <span><button href="" class="btn contact-btn">Contact Me</button></span>
+      <span>
+        <a href="/contact.html"
+          ><button class="contact-btn">Contact Me</button></a
+        ></span
+      >
     </div>
     <h3>Featured Projects</h3>
     <div class="container projects">
@@ -79,13 +83,12 @@
             <p>Let's work together</p>
           </div>
           <div>
-            <a href="" class="btn project-btn mt-3">Contact me</a>
+            <a href="/contact.html" class="btn project-btn mt-3">Contact me</a>
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="mailto:traceyjlintott@hotmail.co.uk" class="email-link">
-            <i class="fa-regular fa-envelope"></i>
-            traceyjlintott@hotmail.co.uk</a
+          <a href="mailto: traceyj28@icloud.com" class="email-link">
+            traceyj28@icloud.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center">
