--- a/projects.html
+++ b/projects.html
@@ -52,56 +52,81 @@
     </div>
     <div class="content-container container">
       <div class="content">
-        <h1 class="mb-4">Projects I've been working on...</h1>
-        <div class="img-grid p-5">
-          <div class="row">
-            <div class="col-sm-6">
-              <img
-                src="imgs/books.png"
-                class="img-fluid rounded-3"
-                alt="book app"
-              />
-            </div>
-            <div class="col-sm-6">
-              <h4>Book App</h4>
-              <p class="para-text">Built with HTML and CSS</p>
-            </div>
-            <div class="col-sm-6">
-              <h4>Weather App</h4>
-              <p class="para-text">Built with HTML, CSS and JavaScript</p>
-            </div>
-            <div class="col-sm-6">
-              <img
-                src="imgs/weather.png"
-                class="img-fluid rounded-3"
-                alt="weather app"
-              />
-            </div>
-            <div class="col-sm-6">
-              <img
-                src="imgs/baking.png"
-                class="img-fluid rounded-3"
-                alt="baking app"
-              />
-            </div>
-            <div class="col-sm-6">
-              <h4>Baking App</h4>
-              <p class="para-text">Built with HTML and CSS</p>
-            </div>
-            <div class="col-sm-6">
-              <h4>World Clock App</h4>
-              <p class="para-text">Built with HTML, CSS and JavaScript</p>
-            </div>
-            <div class="col-sm-6">
-              <img
-                src="imgs/clock.png"
-                class="img-fluid rounded-3"
-                alt="book app"
-              />
-            </div>
+        <h1 class="mb-5">Projects I've been working on!</h1>
+        <div class="row align-items-center">
+          <div class="col-md-6 mb-4">
+            <img
+              src="imgs/books.png"
+              class="img-fluid rounded-3 img-book"
+              alt="book app"
+            />
+          </div>
+          <div class="col-md-6 mb-4">
+            <h4>Book Project</h4>
+            <p class="para-text">Built with HTML and CSS</p>
+          </div>
+          <div class="col-md-6 mb-4">
+            <h4>Weather App</h4>
+            <p class="para-text">Built with HTML, CSS and JavaScript</p>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img
+              src="imgs/weather.png"
+              class="img-fluid rounded-3"
+              alt="weather app"
+            />
+          </div>
+          <div class="col-md-6 mb-4">
+            <img
+              src="imgs/baking.png"
+              class="img-fluid rounded-3"
+              alt="baking app"
+            />
+          </div>
+          <div class="col-md-6 mb-4">
+            <h4>Baking App</h4>
+            <p class="para-text">Built with HTML and CSS</p>
+          </div>
+          <div class="col-md-6 mb-4">
+            <h4>World Clock App</h4>
+            <p class="para-text">Built with HTML, CSS and JavaScript</p>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img
+              src="imgs/clock.png"
+              class="img-fluid rounded-3"
+              alt="book app"
+            />
           </div>
         </div>
       </div>
+      <footer>
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+          <div>
+            <h5>Work Inquiry</h5>
+            <p class="mb-0">Let's work together</p>
+          </div>
+          <div>
+            <a href="/contact.html" class="btn project-btn mt-3">Contact me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto: traceyj28@icloud.com" class="email-link">
+            traceyj28@icloud.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="https://github.com/TLintott" target="_blank">
+            <i class="fa-brands fa-github"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/tracey-lintott/" target="_blank">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+          <a href="https://www.instagram.com/traceyj28/" target="_blank">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
