--- a/about.html
+++ b/about.html
@@ -64,10 +64,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img
-            src="imgs/me.png"
-            class="about-img img-fluid rounded mx-auto d-block"
-          />
+          <img src="imgs/me.png" class="site-imgs img-fluid mx-auto d-block" />
         </div>
       </div>
       <footer>
