--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </nav>
     </div>
     <div class="hero">
-      <h1 class="h1-text">Tracey Lintott</h1>
+      <h1 class="text-center">Tracey Lintott</h1>
       <h2>Aspring Front-End Developer, based in England, UK.</h2>
       <span>
         <a href="/contact.html"
