--- a/projects.html
+++ b/projects.html
@@ -50,56 +50,54 @@
         </ul>
       </nav>
     </div>
+
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Projects I've been working on!</h1>
-        <div class="row align-items-center">
+        <div class="row">
           <div class="col-md-6 mb-4">
             <img
               src="imgs/books.png"
-              class="img-fluid rounded-3 img-book"
+              class="img-fluid site-imgs"
               alt="book app"
             />
-          </div>
-          <div class="col-md-6 mb-4">
-            <h4>Book Project</h4>
-            <p class="para-text">Built with HTML and CSS</p>
-          </div>
-          <div class="col-md-6 mb-4">
-            <h4>Weather App</h4>
-            <p class="para-text">Built with HTML, CSS and JavaScript</p>
+            <h4 class="text-center">Book Project</h4>
+            <p class="para-text text-center">Built with HTML and CSS</p>
           </div>
           <div class="col-md-6 mb-4">
             <img
               src="imgs/weather.png"
-              class="img-fluid rounded-3"
+              class="img-fluid site-imgs"
               alt="weather app"
             />
+            <h4 class="text-center">Weather Project</h4>
+            <p class="para-text text-center">
+              Built with HTML, CSS and JavaScript
+            </p>
           </div>
           <div class="col-md-6 mb-4">
             <img
               src="imgs/baking.png"
-              class="img-fluid rounded-3"
+              class="img-fluid site-imgs"
               alt="baking app"
             />
-          </div>
-          <div class="col-md-6 mb-4">
-            <h4>Baking App</h4>
-            <p class="para-text">Built with HTML and CSS</p>
-          </div>
-          <div class="col-md-6 mb-4">
-            <h4>World Clock App</h4>
-            <p class="para-text">Built with HTML, CSS and JavaScript</p>
+            <h4 class="text-center">Baking Project</h4>
+            <p class="para-text text-center">Built with HTML and CSS</p>
           </div>
           <div class="col-md-6 mb-4">
             <img
               src="imgs/clock.png"
-              class="img-fluid rounded-3"
+              class="img-fluid site-imgs"
               alt="book app"
             />
+            <h4 class="text-center">World Clock Project</h4>
+            <p class="para-text text-center">
+              Built with HTML, CSS and JavaScript
+            </p>
           </div>
         </div>
       </div>
+
       <footer>
         <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
           <div>
