--- a/contact.html
+++ b/contact.html
@@ -53,33 +53,32 @@
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Get in touch...</h1>
-        <div class="row align-items-center">
+        <div class="row align-items-center contact-row">
           <div class="col-lg-6">
-            <h4>Email:</h4>
-            <a href="mailto:traceyjlintott@hotmail.co.uk"
-              >traceyjlintott@hotmail.co.uk</a
-            >
-            <h4>Linkedin</h4>
+            <img
+              src="imgs/contact img.png"
+              class="site-imgs img-fluid rounded mx-auto d-block"
+            />
+          </div>
+
+          <div class="col-lg-6 text-center">
+            <h4 class="text-center">Email</h4>
+            <a href="mailto:traceyj28@icloud.com">traceyj28@icloud.com</a>
+            <h4 class="text-center">Linkedin</h4>
             <a
               href="https://www.linkedin.com/in/tracey-lintott/"
               target="_blank"
               alt=""
               >Tracey Lintott</a
             >
-            <h4>Instagram</h4>
+            <h4 class="text-center">Instagram</h4>
             <a
               href="https://www.instagram.com/traceyj28/"
               target="_blank"
               alt=""
+              class="mb-5"
               >@traceyj28</a
             >
-          </div>
-
-          <div class="col-lg-6">
-            <img
-              src="imgs/contact img.png"
-              class="about-img img-fluid rounded mx-auto d-block"
-            />
           </div>
         </div>
       </div>
