--- a/contact.html
+++ b/contact.html
@@ -25,27 +25,36 @@
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Contact Tracey. Tracey is an apspiring front end engineer based in UK"
+    />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Contact</title>
+    <title>Contact Tracey - Tracey</title>
   </head>
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
         <a href="/">
-          <img src="imgs/tl logo.png" class="logo d-none d-md-block" alt="" />
+          <img
+            src="imgs/tl logo.png"
+            class="logo d-none d-md-block"
+            title="home"
+            alt="Tracey Logo"
+          />
         </a>
         <ul>
           <li>
-            <a href="/">Home</a>
+            <a href="/" title="Homepage">Home</a>
           </li>
           <li>
-            <a href="/about.html">About</a>
+            <a href="/about.html" title="About">About</a>
           </li>
           <li>
-            <a href="/projects.html">Work</a>
+            <a href="/projects.html" title="Work">Work</a>
           </li>
           <li class="active">
-            <a href="/contact.html">Contact</a>
+            <a href="/contact.html" title="Contact">Contact</a>
           </li>
         </ul>
       </nav>
@@ -57,27 +66,22 @@
           <div class="col-lg-6">
             <img
               src="imgs/contact img.png"
+              alt="contact image"
               class="site-imgs img-fluid rounded mx-auto d-block"
             />
           </div>
 
           <div class="col-lg-6 text-center">
             <h4 class="text-center">Email</h4>
-            <a href="mailto:traceyj28@icloud.com">traceyj28@icloud.com</a>
+            <a href="mailto:traceyj28@icloud.com" alt="email address"
+              >traceyj28@icloud.com</a
+            >
             <h4 class="text-center">Linkedin</h4>
             <a
               href="https://www.linkedin.com/in/tracey-lintott/"
               target="_blank"
-              alt=""
+              alt="Linkedin"
               >Tracey Lintott</a
-            >
-            <h4 class="text-center">Instagram</h4>
-            <a
-              href="https://www.instagram.com/traceyj28/"
-              target="_blank"
-              alt=""
-              class="mb-5"
-              >@traceyj28</a
             >
           </div>
         </div>
@@ -93,19 +97,23 @@
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="mailto: traceyj28@icloud.com" class="email-link">
+          <a
+            href="mailto: traceyj28@icloud.com"
+            class="email-link"
+            title="email-link"
+          >
             traceyj28@icloud.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center">
           <a href="https://github.com/TLintott" target="_blank">
-            <i class="fa-brands fa-github"></i>
+            <i class="fa-brands fa-github" title="github"></i>
           </a>
           <a href="https://www.linkedin.com/in/tracey-lintott/" target="_blank">
-            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-linkedin" title="linkedin"></i>
           </a>
           <a href="https://www.instagram.com/traceyj28/" target="_blank">
-            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-instagram" title="instagram"></i>
           </a>
         </div>
       </footer>
