--- a/index.html
+++ b/index.html
@@ -25,27 +25,36 @@
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content=" Tracey is an apspiring front end engineer based in UK"
+    />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Home</title>
+    <title>Aspring Font-End Developer TL</title>
   </head>
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
         <a href="/">
-          <img src="imgs/tl logo.png" class="logo d-none d-md-block" alt="" />
+          <img
+            src="imgs/tl logo.png"
+            title="home"
+            class="logo d-none d-md-block"
+            alt="Tracey Logo"
+          />
         </a>
         <ul>
           <li class="active">
-            <a href="/">Home</a>
+            <a href="/" title="Homepage">Home</a>
           </li>
           <li>
-            <a href="/about.html">About</a>
+            <a href="/about.html" title="About">About</a>
           </li>
           <li>
-            <a href="/projects.html">Projects</a>
+            <a href="/projects.html" title="Projects">Projects</a>
           </li>
           <li>
-            <a href="/contact.html">Contact</a>
+            <a href="/contact.html" title="Contact">Contact</a>
           </li>
         </ul>
       </nav>
@@ -63,16 +72,32 @@
     <div class="container projects">
       <div class="row">
         <div class="col-sm-3">
-          <img src="imgs/books.png" class="img-fluid project-img" />
+          <img
+            src="imgs/books.png"
+            class="img-fluid project-img"
+            alt="book project"
+          />
         </div>
         <div class="col-sm-3">
-          <img src="imgs/baking.png" class="img-fluid project-img" />
+          <img
+            src="imgs/baking.png"
+            class="img-fluid project-img"
+            alt="baking project"
+          />
         </div>
         <div class="col-sm-3">
-          <img src="imgs/weather.png" class="img-fluid project-img" />
+          <img
+            src="imgs/weather.png"
+            class="img-fluid project-img"
+            alt="weather project"
+          />
         </div>
         <div class="col-sm-3">
-          <img src="imgs/clock.png" class="img-fluid project-img" />
+          <img
+            src="imgs/clock.png"
+            class="img-fluid project-img"
+            alt="clock project"
+          />
         </div>
       </div>
 
@@ -93,15 +118,21 @@
         </div>
         <div class="social-links d-flex justify-content-center">
           <a href="https://github.com/TLintott" target="_blank">
-            <i class="fa-brands fa-github"></i>
+            <i class="fa-brands fa-github" title="github"></i>
           </a>
           <a href="https://www.linkedin.com/in/tracey-lintott/" target="_blank">
-            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-linkedin" title="linkedin"></i>
           </a>
           <a href="https://www.instagram.com/traceyj28/" target="_blank">
-            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-instagram" title="instagram"></i>
           </a>
         </div>
+        <small>
+          <p class="text-center mt-5">
+            🤘🏻This Project was coded by Tracey Lintott, and is
+            <a href="">opened-sourced</a>
+          </p>
+        </small>
       </footer>
     </div>
   </body>
