--- a/about.html
+++ b/about.html
@@ -25,27 +25,36 @@
     />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content=" Tracey is an apspiring front end engineer based in UK"
+    />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>About</title>
+    <title>About Tracey. Aspring Font-End Developer TL</title>
   </head>
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
         <a href="/">
-          <img src="imgs/tl logo.png" class="logo d-none d-md-block" alt="" />
+          <img
+            src="imgs/tl logo.png"
+            class="logo d-none d-md-block"
+            title="home"
+            alt="Tracey logo"
+          />
         </a>
         <ul>
           <li>
-            <a href="/">Home</a>
+            <a href="/" title="Homepage">Home</a>
           </li>
           <li class="active">
-            <a href="/about.html">About</a>
+            <a href="/about.html" title="About">About</a>
           </li>
           <li>
-            <a href="/projects.html">Work</a>
+            <a href="/projects.html" title="Work">Work</a>
           </li>
           <li>
-            <a href="/contact.html">Contact</a>
+            <a href="/contact.html" title="Contact">Contact</a>
           </li>
         </ul>
       </nav>
@@ -64,7 +73,11 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="imgs/me.png" class="site-imgs img-fluid mx-auto d-block" />
+          <img
+            src="imgs/me.png"
+            class="site-imgs img-fluid mx-auto d-block"
+            alt="Image Tracey"
+          />
         </div>
       </div>
       <footer>
@@ -84,13 +97,13 @@
         </div>
         <div class="social-links d-flex justify-content-center">
           <a href="https://github.com/TLintott" target="_blank">
-            <i class="fa-brands fa-github"></i>
+            <i class="fa-brands fa-github" title="github"></i>
           </a>
           <a href="https://www.linkedin.com/in/tracey-lintott/" target="_blank">
-            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-linkedin" title="linkedin"></i>
           </a>
           <a href="https://www.instagram.com/traceyj28/" target="_blank">
-            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-instagram" title="instagram"></i>
           </a>
         </div>
       </footer>
