--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
         <small>
           <p class="text-center mt-5">
             🤘🏻This Project was coded by Tracey Lintott, and is
-            <a href="">opened-sourced</a>
+            <a href="https://github.com/TLintott/My-Portfolio" target="_blank"
+              >opened-sourced</a
+            >
           </p>
         </small>
       </footer>
