added recent travel app to projects

--- a/projects.html
+++ b/projects.html
@@ -70,7 +70,13 @@
               class="img-fluid site-imgs"
               alt="book app"
             />
-            <h4 class="text-center">Book Project</h4>
+            <h4 class="text-center">
+              <a
+                href="https://www.shecodes.io/workshops/shecodes-basics-60e1eb47-f83e-4cae-a9e9-4aa22def5147/projects/1744062"
+                target="_blank"
+                >Book Project</a
+              >
+            </h4>
             <p class="para-text text-center">Built with HTML and CSS</p>
           </div>
           <div class="col-md-6 mb-4">
@@ -79,7 +85,13 @@
               class="img-fluid site-imgs"
               alt="weather app"
             />
-            <h4 class="text-center">Weather Project</h4>
+            <h4 class="text-center">
+              <a
+                href="https://roaring-phoenix-945815.netlify.app/"
+                target="_blank"
+                >Weather Project</a
+              >
+            </h4>
             <p class="para-text text-center">
               Built with HTML, CSS and JavaScript
             </p>
@@ -90,7 +102,13 @@
               class="img-fluid site-imgs"
               alt="baking app"
             />
-            <h4 class="text-center">Baking Project</h4>
+            <h4 class="text-center">
+              <a
+                href="https://www.shecodes.io/workshops/shecodes-basics-add-on-92e7c0c6-06bb-4e2b-9d8e-9a74bb69edf0/projects/1757752"
+                target="_blank"
+                >Baking Project</a
+              >
+            </h4>
             <p class="para-text text-center">Built with HTML and CSS</p>
           </div>
           <div class="col-md-6 mb-4">
@@ -99,10 +117,27 @@
               class="img-fluid site-imgs"
               alt="book app"
             />
-            <h4 class="text-center">World Clock Project</h4>
+            <h4 class="text-center">
+              <a href="https://tlworldclockproject.netlify.app/" target="_blank"
+                >World Clock Project</a
+              >
+            </h4>
             <p class="para-text text-center">
               Built with HTML, CSS and JavaScript
             </p>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img
+              src="imgs/Travel.png"
+              class="img-fluid site-imgs"
+              alt="book app"
+            />
+            <h4 class="text-center">
+              <a href="https://traveltomauritius.netlify.app/" target="_blank"
+                >Travel Project</a
+              >
+            </h4>
+            <p class="para-text text-center">Built with HTML and CSS</p>
           </div>
         </div>
       </div>
