barbie project added

--- a/projects.html
+++ b/projects.html
@@ -139,6 +139,19 @@
             </h4>
             <p class="para-text text-center">Built with HTML and CSS</p>
           </div>
+          <div class="col-md-6 mb-4">
+            <img
+              src="imgs/barbie.png"
+              class="img-fluid site-imgs"
+              alt="book app"
+            />
+            <h4 class="text-center">
+              <a href="https://barbielandingpage.netlify.app/" target="_blank"
+                >Barbie Project</a
+              >
+            </h4>
+            <p class="para-text text-center">Built with HTML and CSS</p>
+          </div>
         </div>
       </div>
 
