--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="row">
         <div class="col-sm-3">
           <img
-            src="imgs/books.png"
+            src="imgs/Travel.png"
             class="img-fluid project-img"
             alt="book project"
           />
