minor content tweaks

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content=" Tracey is an apspiring front end engineer based in UK"
+      content=" Tracey is an Aspiring front end engineer based in UK"
     />
     <link rel="stylesheet" href="css/styles.css" />
     <title>Aspring Font-End Developer TL</title>
@@ -61,7 +61,7 @@
     </div>
     <div class="hero">
       <h1 class="text-center">Tracey Lintott</h1>
-      <h2>Aspring Front-End Developer, based in England, UK.</h2>
+      <h2>Aspiring Front-End Developer, based in England, UK.</h2>
       <span>
         <a href="/contact.html"
           ><button class="contact-btn">Contact Me</button></a
