--- a/projects.html
+++ b/projects.html
@@ -62,8 +62,67 @@
 
     <div class="content-container container">
       <div class="content">
-        <h1 class="mb-5">Projects I've been working on!</h1>
+        <h1 class="mb-5">Projects I've been working on...</h1>
         <div class="row">
+          <div class="col-md-6 mb-4">
+            <img
+              src="imgs/react weather project.png"
+              class="img-fluid site-imgs"
+              alt="React Weather Project"
+            />
+            <h4 class="text-center">
+              <a
+                href="https://ornate-sorbet-1cc62d.netlify.app/"
+                target="_blank"
+                >React Weather Project</a
+              >
+            </h4>
+            <p class="para-text text-center">Built with HTML, CSS and React</p>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img
+              src="imgs/halloween countdown 2023.png"
+              class="img-fluid site-imgs"
+              alt="book app"
+            />
+            <h4 class="text-center">
+              <a
+                href="https://stately-stroopwafel-0e2190.netlify.app/"
+                target="_blank"
+                >Halloween Countdown Project</a
+              >
+            </h4>
+            <p class="para-text text-center">
+              Built with HTML, CSS and JavaScript
+            </p>
+          </div>
+
+          <div class="col-md-6 mb-4">
+            <img
+              src="imgs/Travel.png"
+              class="img-fluid site-imgs"
+              alt="book app"
+            />
+            <h4 class="text-center">
+              <a href="https://traveltomauritius.netlify.app/" target="_blank"
+                >Travel Project</a
+              >
+            </h4>
+            <p class="para-text text-center">Built with HTML and CSS</p>
+          </div>
+          <div class="col-md-6 mb-4">
+            <img
+              src="imgs/barbie.png"
+              class="img-fluid site-imgs"
+              alt="book app"
+            />
+            <h4 class="text-center">
+              <a href="https://barbielandingpage.netlify.app/" target="_blank"
+                >Barbie Project</a
+              >
+            </h4>
+            <p class="para-text text-center">Built with HTML and CSS</p>
+          </div>
           <div class="col-md-6 mb-4">
             <img
               src="imgs/books.png"
@@ -125,32 +184,6 @@
             <p class="para-text text-center">
               Built with HTML, CSS and JavaScript
             </p>
-          </div>
-          <div class="col-md-6 mb-4">
-            <img
-              src="imgs/Travel.png"
-              class="img-fluid site-imgs"
-              alt="book app"
-            />
-            <h4 class="text-center">
-              <a href="https://traveltomauritius.netlify.app/" target="_blank"
-                >Travel Project</a
-              >
-            </h4>
-            <p class="para-text text-center">Built with HTML and CSS</p>
-          </div>
-          <div class="col-md-6 mb-4">
-            <img
-              src="imgs/barbie.png"
-              class="img-fluid site-imgs"
-              alt="book app"
-            />
-            <h4 class="text-center">
-              <a href="https://barbielandingpage.netlify.app/" target="_blank"
-                >Barbie Project</a
-              >
-            </h4>
-            <p class="para-text text-center">Built with HTML and CSS</p>
           </div>
         </div>
       </div>
