resume link added

--- a/about.html
+++ b/about.html
@@ -70,6 +70,7 @@
               in England, UK.
             </p>
             <a href="/projects.html" class="btn project-btn">My Projects</a>
+            <a href="https://1drv.ms/b/s!AvkhU0KUj7uLi51uKJR0fbfAXcWNYw?e=iaVTMo" target="_blank" class="btn resume-btn">My Resume</a>
           </div>
         </div>
         <div class="col-lg-6">
