--- a/projects.html
+++ b/projects.html
@@ -65,6 +65,13 @@
         <h1 class="mb-5">Projects I've been working on...</h1>
         <div class="row">
           <div class="col-md-6 mb-4">
+            <img src="" class="img-fluid site-imgs" alt="React Dictionary Project" />
+            <h4 class="text-center">
+              <a href="https://ornate-sorbet-1cc62d.netlify.app/" target="_blank">Dictionary Project</a>
+            </h4>
+            <p class="para-text text-center">Built with HTML, CSS and React</p>
+          </div>
+          <div class="col-md-6 mb-4">
             <img
               src="imgs/react weather project.png"
               class="img-fluid site-imgs"
