--- a/about.html
+++ b/about.html
@@ -70,7 +70,9 @@
               in England, UK.
             </p>
             <a href="/projects.html" class="btn project-btn">My Projects</a>
+            <span><a href="https://1drv.ms/b/s!AvkhU0KUj7uLi51uKJR0fbfAXcWNYw?e=BMHarB" target="_blank" class="btn project-btnR">My Resume</a></span>
           </div>
+          
         </div>
         <div class="col-lg-6">
           <img
