--- a/projects.html
+++ b/projects.html
@@ -65,6 +65,22 @@
         <h1 class="mb-5">Projects I've been working on...</h1>
         <div class="row">
           <div class="col-md-6 mb-4">
+            <img src="imgs/pasta.png" class="img-fluid site-imgs" alt="Flavorful FoodProject" />
+            <h4 class="text-center">
+              <a href="https://luxury-bunny-45ee46.netlify.app/" target="_blank">Flavorful Food Project</a>
+            </h4>
+            <p class="para-text text-center">Built with HTML, CSS and Bootstrap</p>
+          </div>
+
+          <div class="col-md-6 mb-4">
+            <img src="imgs/dictionary.png" class="img-fluid site-imgs" alt="React Dictioinary Project" />
+            <h4 class="text-center">
+              <a href="https://tubular-hummingbird-38639d.netlify.app/" target="_blank">React Dictioinary Project</a>
+            </h4>
+            <p class="para-text text-center">Built with HTML, CSS and React</p>
+          </div>
+
+          <div class="col-md-6 mb-4">
             <img
               src="imgs/react weather project.png"
               class="img-fluid site-imgs"
