--- a/projects.html
+++ b/projects.html
@@ -64,31 +64,24 @@
       <div class="content">
         <h1 class="mb-5">Projects I've been working on...</h1>
         <div class="row">
-          <div class="col-md-6 mb-4">
-<<<<<<< HEAD
-            <img src="imgs/pasta.png" class="img-fluid site-imgs" alt="Flavorful FoodProject" />
-            <h4 class="text-center">
-              <a href="https://luxury-bunny-45ee46.netlify.app/" target="_blank">Flavorful Food Project</a>
-            </h4>
-            <p class="para-text text-center">Built with HTML, CSS and Bootstrap</p>
-          </div>
+
+            <div class="col-md-6 mb-4">
+              <img src="imgs/pasta.png" class="img-fluid site-imgs" alt="Pasta Weather Project" />
+              <h4 class="text-center">
+                <a href="https://ornate-sorbet-1cc62d.netlify.app/" target="_blank">Flavorful Food Challenge</a>
+              </h4>
+              <p class="para-text text-center">Built with HTML and CSS</p>
+            </div>
+
 
           <div class="col-md-6 mb-4">
-            <img src="imgs/dictionary.png" class="img-fluid site-imgs" alt="React Dictioinary Project" />
-            <h4 class="text-center">
-              <a href="https://tubular-hummingbird-38639d.netlify.app/" target="_blank">React Dictioinary Project</a>
-            </h4>
-            <p class="para-text text-center">Built with HTML, CSS and React</p>
-          </div>
-
-=======
-            <img src="" class="img-fluid site-imgs" alt="React Dictionary Project" />
+            <img src="imgs/dictionary.png" class="img-fluid site-imgs" alt="React Dictionary Project" />
             <h4 class="text-center">
               <a href="https://ornate-sorbet-1cc62d.netlify.app/" target="_blank">Dictionary Project</a>
             </h4>
             <p class="para-text text-center">Built with HTML, CSS and React</p>
           </div>
->>>>>>> c2329e9a8256703ab9a91075a0e3bb4450e1b415
+
           <div class="col-md-6 mb-4">
             <img
               src="imgs/react weather project.png"
@@ -104,6 +97,8 @@
             </h4>
             <p class="para-text text-center">Built with HTML, CSS and React</p>
           </div>
+
+
           <div class="col-md-6 mb-4">
             <img
               src="imgs/halloween countdown 2023.png"
