--- a/projects.html
+++ b/projects.html
@@ -68,7 +68,7 @@
             <div class="col-md-6 mb-4">
               <img src="imgs/pasta.png" class="img-fluid site-imgs" alt="Pasta Weather Project" />
               <h4 class="text-center">
-                <a href="https://ornate-sorbet-1cc62d.netlify.app/" target="_blank">Flavorful Food Challenge</a>
+                <a href="https://luxury-bunny-45ee46.netlify.app/" target="_blank">Flavorful Food Challenge</a>
               </h4>
               <p class="para-text text-center">Built with HTML and CSS</p>
             </div>
@@ -77,7 +77,7 @@
           <div class="col-md-6 mb-4">
             <img src="imgs/dictionary.png" class="img-fluid site-imgs" alt="React Dictionary Project" />
             <h4 class="text-center">
-              <a href="https://ornate-sorbet-1cc62d.netlify.app/" target="_blank">Dictionary Project</a>
+              <a href="https://tubular-hummingbird-38639d.netlify.app/" target="_blank">Dictionary Project</a>
             </h4>
             <p class="para-text text-center">Built with HTML, CSS and React</p>
           </div>
